--- a/eficiência-energética/appsettings.json
+++ b/eficiência-energética/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ApiKey": "SecretKey12345",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=EficienciaEnergeticaDb;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
